--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>bibliography-graph-analysis</name>
+	<name>bga-data</name>
 	<comment></comment>
 	<projects>
 		<project>general</project>
